--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -35,6 +35,8 @@ android {
 
 dependencies {
     api 'com.tencent.mm.opensdk:wechat-sdk-android:6.8.11'
+    implementation 'com.github.kevinsawicki:http-request:6.0'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.3'
 }
 
 task generateSourcesJar(type: Jar) {
